# awesome-windows-applications

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt  ruff.toml
.old/v1/data/: winsoft.yml
.old/v1/pages/: winsoft.md
.old/v1/scripts/: winsoft.py
.old/v2/: requirements.txt
.old/v2/data/: winsoft_v2.yml
.old/v2/docs/: Windows_Software_v2.md  winsoft_v2.md
.old/v2/scripts/: mdstr.py  winsoft_v2.py
.old/v2/templates/: head.md  tail.md
.old/v3/docs/: winsoft_2.1.2.md  winsoft_3.0.0.md
.old/v3/scripts/: winsoft.py
.old/v3/templates/: foot.md  head.md
.old/v5/: requirements.txt
.old/v5/data/: winsoft.schema.json  winsoft.yml
.old/v5/docs/: WinSoft_5.1.0.md  WinSoft_5.3.0.md
.old/v5/scripts/: winsoft5.py
.old/v5/templates/: template.md.j2  winsoft.html.j2
data/: template.app.yml  winsoft6.app.yml
docs/: index.html
schemas/: awesome-application-6.schema.json
scripts/: __init__.py  render.py
templates/: winsoft.html.j2
